--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <meta name="description" content="_____"><meta property="og:site_name" content="frostt">
 <meta property="og:title" content="frostt"><meta property="og:type" content="website"><meta property="og:description" content="_____">
-<meta property="og:image" content="https://frostxyz.carrd.co/assets/images/card.jpg?v=dd21c19c">
+<meta property="og:image" content="/index_files/frost_banner.jpg">
 <meta property="og:image:type" content="image/jpeg"><meta property="og:image:width" content="1280">
 <meta property="og:image:height" content="800"><meta property="og:url" content="https://frostxyz.carrd.co">
 <meta property="twitter:card" content="summary_large_image"><link href="index_files/css.css" rel="stylesheet" type="text/css">
