--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,8 @@
 <title>frostt</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-<meta name="description" content="_____"><meta property="og:site_name" content="frostt">
-<meta property="og:title" content="frostt"><meta property="og:type" content="website"><meta property="og:description" content="_____">
+<meta name="description" content="socials"><meta property="og:site_name" content="frostt">
+<meta property="og:title" content="frostt"><meta property="og:type" content="website"><meta property="og:description" content="socials">
 <meta property="og:image" content="/index_files/frost_banner.jpg">
 <meta property="og:image:type" content="image/jpeg"><meta property="og:image:width" content="1280">
 <meta property="og:image:height" content="800"><meta property="og:url" content="https://frostxyz.carrd.co">
