--- a/index.htm
+++ b/index.htm
@@ -33,8 +33,8 @@
 <p id="text05">reddit - <code>xFRxSTx</code></p><ul id="links04" class="links"><li><a class="n01" href="https://steamcommunity.com/id/frost_xyz/">/steam/</a></li></ul>
 <p id="text06">twitter - <code>fr6st_</code></p><ul id="links05" class="links"><li><a class="n01" href="https://www.instagram.com/frost.xyz/">/instagram/</a></li></ul>
 <div data-aos="fade-up" data-aos-anchor-placement="top-center">
-<p>"test"</p>
+<p id="text07">"test"</p>
 </div>
-<p id="text07"><mark>frostt</mark></p></div></div></div>
+<p id="text08"><mark>frostt</mark></p></div></div></div>
 </body>
 </html>
