--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <link type="text/css" id="dark-mode" rel="stylesheet" href="" /> 
+  <link type="text/css" id="dark-mode" rel="stylesheet" href="index_files/css.css" /> 
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>frostt</title>
   <meta charset="utf-8" />
