--- a/index.html
+++ b/index.html
@@ -1,116 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <link type="text/css" id="dark-mode" rel="stylesheet" href="index_files/css.css" /> 
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>frostt</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-  <meta name="description" content="_____" />
-  <meta property="og:site_name" content="frostt" />
-  <meta property="og:title" content="frostt" />
-  <meta property="og:type" content="website" />
-  <meta property="og:description" content="_____" />
-  <meta property="og:image" content="https://frostxyz.carrd.co/assets/images/card.jpg?v=dd21c19c" />
-  <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="1280" />
-  <meta property="og:image:height" content="800" />
-  <meta property="og:url" content="https://frostxyz.carrd.co" />
-  <meta property="twitter:card" content="summary_large_image" />
-  <link href="index_files/css.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="index_files/aos.css" />
-  <script src="index_files/aos.js"></script>
-  <script> AOS.init(); </script> 
-  <script>
-  AOS.init({
-    disable: false, 
-    startEvent: 'DOMContentLoaded', 
-    initClassName: 'aos-init', 
-    animatedClassName: 'aos-animate', 
-    useClassNames: false, 
-    disableMutationObserver: false, 
-    debounceDelay: 50, 
-    throttleDelay: 99, 
-    
-  
-    
-    offset: 120, 
-    delay: 0, 
-    duration: 400, 
-    easing: 'ease', 
-    once: false, 
-    mirror: false, 
-    anchorPlacement: 'top-bottom', 
-  
-  });
-  </script>
-  <script src="app.js"></script>
-</head>
-<body style="background-color:#EDEDED;"   >
-<div id="toptext">
-    <p>fros<strong>t</strong></p>
-</div>
-<ul id="links01" class="links">
-    <li>
-    <a href="http://frost-xyz.us.to:54322/content/psc.mp3">/music stream/</a>
-    </li>
-</ul>
+ <head> 
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
+  <title>frostt</title> 
+  <meta charset="utf-8" /> 
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" /> 
+  <meta name="description" content="_____" /> 
+  <meta property="og:site_name" content="frostt" /> 
+  <meta property="og:title" content="frostt" /> 
+  <meta property="og:type" content="website" /> 
+  <meta property="og:description" content="_____" /> 
+  <meta property="og:image" content="https://frostxyz.carrd.co/assets/images/card.jpg?v=dd21c19c" /> 
+  <meta property="og:image:type" content="image/jpeg" /> 
+  <meta property="og:image:width" content="1280" /> 
+  <meta property="og:image:height" content="800" /> 
+  <meta property="og:url" content="https://frostxyz.carrd.co" /> 
+  <meta property="twitter:card" content="summary_large_image" /> 
+  <link href="styles/css.css" rel="stylesheet" type="text/css" /> 
+  <link href="styles/fade-in.css" rel="stylesheet" type="text/css" /> 
+  <script src="app.js"></script> 
+ </head> 
 
-<div id="text02">
-    <p><s>social</s></p>
-</div>
+  <!-- Start of socials list-->
 
-<div id="text_black">
-  discord -
-  <code>frost#1633</code>
-</div>
+  <body onload="document.body.style.opacity='1'">
 
-<ul id="links02" class="links">
-  <li>
-  <a href="https://open.spotify.com/user/f3kt0iibbwi24lol31vb65a0p?si=c-l_wvYUQ0eW2p1nme3y7g&nd=1">/spotify/</a>
-  </li>
-</ul>
-
-<div id="text_black">
-  vrchat -
-  <code>frost.xyz</code>
-</div>
-
-<ul id="links02" class="links">
-  <li>
-  <a href="https://github.com/frostxyz-bit">/github/</a>
-  </li>
-</ul>
-
-<div id="text_black">
-  reddit -
-  <code>xFRxSTx</code>
-</div>
-
-<ul id="links02" class="links">
-  <li>
-  <a href="https://steamcommunity.com/id/frost_xyz/">/steam/</a>
-  </li>
-</ul>
-
-<div id="text_black">
-  twitter -
-  <code>fr6st_</code>
-</div>
-
-<ul id="links02" class="links">
-  <li>
-  <a href="https://www.instagram.com/frost.xyz/">/instagram/</a>
-  </li>
-</ul>
-
-<div id="bottomtext">
-  <p>frostt</p>
-</div>
-
-
-
-
-
+ <body style="background-color:#EDEDED;"> 
+  <div id="toptext"> 
+   <p>fros<strong>t</strong></p> 
+  </div> 
+  <ul id="music-stream" class="links"> 
+   <li> <a href="http://frost-xyz.us.to:54322/content/psc.mp3">/music stream/</a> </li> 
+  </ul> 
+  <div id="social"> 
+   <p><s>social</s></p> 
+  </div> 
+  <div id="text">
+    discord - 
+<code>frost#1633</code> 
+  </div> 
+  <ul id="links" class="links"> 
+   <li> <a href="https://open.spotify.com/user/f3kt0iibbwi24lol31vb65a0p?si=c-l_wvYUQ0eW2p1nme3y7g&amp;nd=1">/spotify/</a> </li> 
+  </ul> 
+  <div id="text">
+    vrchat - 
+   <code>frost.xyz</code> 
+  </div> 
+  <ul id="links" class="links"> 
+   <li> <a href="https://github.com/frostxyz-bit">/github/</a> </li> 
+  </ul> 
+  <div id="text">
+    reddit - 
+   <code>xFRxSTx</code> 
+  </div> 
+  <ul id="links" class="links"> 
+   <li> <a href="https://steamcommunity.com/id/frost_xyz/">/steam/</a> </li> 
+  </ul> 
+  <div id="text">
+    twitter - 
+   <code>fr6st_</code> 
+  </div> 
+  <ul id="links" class="links"> 
+   <li> <a href="https://www.instagram.com/frost.xyz/">/instagram/</a> </li> 
+  </ul> 
+  <div id="bottomtext"> 
+   <p>frostt</p> 
+  </div>  
  </body>
-</html> 
+</html>
