funny little animation fix

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <code>fr6st_</code>
 </div>
 
-<ul id="links02" class="links">
+<ul id="links02" class="links" data-aos="fade-in" >
   <li>
   <a href="https://www.instagram.com/frost.xyz/">/instagram/</a>
   </li>
@@ -141,10 +141,10 @@ AOS.init({
   throttleDelay: 99, 
   
 
-  offset: 120, 
-  delay: 250, 
+  offset: 100, 
+  delay: 0, 
   duration: 800, 
-  easing: 'ease', 
+  easing: 'ease-out-cubic', 
   once: false, 
   mirror: false,
   anchorPlacement: 'center-bottom', 
