--- a/music/index.html
+++ b/music/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <link type="text/css" id="dark-mode" rel="stylesheet" href="index_files/css.css" /> 
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <title>music stream</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+  <meta name="description" content="stream" />
+  <meta property="og:site_name" content="music stream" />
+  <meta property="og:title" content="music stream" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="stream" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1280" />
+  <meta property="og:image:height" content="800" />
+  <link href="index_files/css.css" rel="stylesheet" type="text/css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+</head>
+<div id="toptext">
+    <p>music strea<strong>m</strong></p>
+</div>
