--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <code>fr6st_</code>
 </div>
 
-<ul id="links02" class="links" data-aos="fade-in" >
+<ul id="links02" class="links">
   <li>
   <a href="https://www.instagram.com/frost.xyz/">/instagram/</a>
   </li>
