--- a/music/index.html
+++ b/music/index.html
@@ -17,6 +17,15 @@
   <link href="index_files/css.css" rel="stylesheet" type="text/css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<div id="toptext">
+<body style="background-color:#EDEDED;">
+
+ <div id="toptext">
     <p>music strea<strong>m</strong></p>
-</div>
+ </div>
+ 
+ <audio controls>
+  <source src="http://frost-xyz.us.to:54322/content/psc.mp3" type="audio/mp3">
+  <p>your browser doesnt support html5 audio. here is a <a href="http://frost-xyz.us.to:54322/content/psc.mp33">link to the audio</a> instead.</p>
+</audio>
+ 
+</body>
