--- a/music/index.html
+++ b/music/index.html
@@ -23,7 +23,7 @@
     <p>music strea<strong>m</strong></p>
 </div>
  
-<audio controls>
+<audio controls autoplay>
   <source src="http://frost-xyz.us.to:54322/content/psc.mp3" type="audio/mp3">
   <p>your browser doesnt support html5 audio. here is a <a href="http://frost-xyz.us.to:54322/content/psc.mp33">link to the audio</a> instead.</p>
 </audio>
