--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 </div>
 
 <div id="albumcover">
+ 
+ 
+ 
+ 
+<div id="bottomtitle">
+ <a href="https://github.com/frostxyz-bit/music">offline music library</a>
+</div>
 
   <div id="bottomtext">
     <p>frostt</p>
