--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1280" />
   <meta property="og:image:height" content="800" />
-  <meta property="og:url" content="https://frostxyz.carrd.co" />
+  <meta property="og:url" content="https://frostt.xyz" />
   <meta property="twitter:card" content="summary_large_image" />
   <link href="index_files/css.css" rel="stylesheet" type="text/css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
