--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
 
 <div class="row">
   <div class="column" data-aos="fade-up">
-    <img src="index_files/album1.png" alt="cvrsed - oxymoronic.txt files" style="width:350px;height:350px;">
-    <p id="desc">cvrsed - oxymoronic.txtfiles</p> 
+    <img src="index_files/album1.jpg" alt="Imani - racecar" style="width:350px;height:350px;">
+    <p id="desc">Imani - racecar</p> 
   </div>
 
   <div class="column" data-aos="fade-up">
-  <img src="index_files/album2.jpg" alt="sewerslvt - Skitzofrenia Simulation" style="width:350px;height:350px;">
-  <p id="desc">Sewerslvt - Skitzofrenia Simulation</p>
+  <img src="index_files/album2.jpg" alt="George Clanton - Slide" style="width:350px;height:350px;">
+  <p id="desc">George Clanton - Slide</p>
   </div>
 
   <div class="column" data-aos="fade-up">
-    <img src="index_files/album3.jpg" alt="My Bloody Valentine - m b v" style="width:350px;height:350px;">
-    <p id="desc">My Bloody Valentine - m b v</p>
+    <img src="index_files/album3.jpg" alt="The Smiths - Hatful Of Hollow" style="width:350px;height:350px;">
+    <p id="desc">The Smiths - Hatful Of Hollow</p>
     </div>
 
 </div>
