--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 <ul id="links01" class="links">
     <li>
-    <a href="http://frost-xyz.us.to:54322/content/psc.mp3">/music stream/</a>
+    <a href="http://frost:music@frost-xyz.us.to:54322/content/psc.mp3">/music stream/</a>
     </li>
 </ul>
 
