--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="frostt" /> 
   <meta property="og:type" content="website" /> 
   <meta property="og:description" content="_____" /> 
-  <meta property="og:image" content="https://frostxyz.carrd.co/assets/images/card.jpg?v=dd21c19c" /> 
+  <meta property="og:image" content="assets/frost_banner.jpg" /> 
   <meta property="og:image:type" content="image/jpeg" /> 
   <meta property="og:image:width" content="1280" /> 
   <meta property="og:image:height" content="800" /> 
