--- a/index.html
+++ b/index.html
@@ -63,6 +63,34 @@
   <ul id="links" class="links"> 
    <li> <a href="https://www.instagram.com/frost.xyz/">/instagram/</a> </li> 
   </ul> 
+  
+<div id="bottomtitle">
+  <p>recent albums:</p>
+</div>
+<div class="row">
+  <div class="column" data-aos="fade-up">
+    <img src="index_files/album1.jpg" alt="Imani - racecar" style="width:350px;height:350px;">
+    <p id="desc">Imani - racecar</p> 
+  </div>
+  <div class="column" data-aos="fade-up">
+  <img src="index_files/album2.jpg" alt="George Clanton - Slide" style="width:350px;height:350px;">
+  <p id="desc">George Clanton - Slide</p>
+  </div>
+  <div class="column" data-aos="fade-up">
+    <img src="index_files/album3.jpg" alt="The Smiths - Hatful Of Hollow" style="width:350px;height:350px;">
+    <p id="desc">The Smiths - Hatful Of Hollow</p>
+    </div>
+</div>
+<div class="center" data-aos="fade-up">
+</div>
+<div id="albumcover">
+ 
+ 
+<div id="bottomtitle">
+ <a href="https://github.com/frostxyz-bit/music">offline music library</a>
+</div>
+
+  
   <div id="bottomtext"> 
    <p>frostt</p> 
   </div>  
