--- a/music/index.html
+++ b/music/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <link type="text/css" id="dark-mode" rel="stylesheet" href="index_files/css.css" /> 
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>music stream</title>
   <meta charset="utf-8" />
@@ -11,23 +10,25 @@
   <meta property="og:title" content="music stream" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="stream" />
-  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:type" content="/assets/frost_banner.jpg" />
   <meta property="og:image:width" content="1280" />
   <meta property="og:image:height" content="800" />
-  <link href="index_files/css.css" rel="stylesheet" type="text/css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="icon" href="/assets/favicon.png">
+  <link href="/styles/css.css" rel="stylesheet" type="text/css" />
+  <link href="/styles/fade-in.css" rel="stylesheet" type="text/css" />
+
 </head>
-<body style="background-color:#EDEDED;">
+<body onload="document.body.style.opacity='1'"> 
+
 
 <div id="toptext">
     <p>music strea<strong>m</strong></p>
 </div>
- 
- 
-<div id="center"> 
+
+<div id= audio >
 <audio controls autoplay>
-  <source src="http://frost-xyz.us.to:54322/content/psc.mp3" type="audio/mp3">
-  <p>your browser doesnt support html5 audio. here is a <a href="http://frost-xyz.us.to:54322/content/psc.mp33">link to the audio</a> instead.</p>
+  <source src="http://frost:music@frost-xyz.us.to:54322/content/psc.mp3" type="audio/mp3">
+  <p>your browser doesnt support html5 audio. here is a <a href="http://frost:music@frost-xyz.us.to:54322/content/psc.mp3">link to the audio</a> instead.</p>
 </audio>
 </div>
  
