weekly update ahhahahah but like not weekly bcuz im stu[id

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 </div>
 <div class="row">
   <div class="album" data-aos="fade-up">
-    <img src="assets/album1.jpg" alt="Imani - racecar" style="width:350px;height:350px;">
-    <p>Imani - racecar</p> 
+    <img src="assets/album1.jpg" alt="tirestires - SHADOWDOG" style="width:350px;height:350px;">
+    <p>tirestires - SHADOWDOG</p> 
   </div>
   <div class="album" data-aos="fade-up">
-    <img src="assets/album2.jpg" alt="George Clanton - Slide" style="width:350px;height:350px;">
-  <p>George Clanton - Slide</p>
+    <img src="assets/album2.jpg" alt="Radiohead - In Rainbows" style="width:350px;height:350px;">
+  <p>Radiohead - In Rainbows</p>
   </div>
   <div class="album" data-aos="fade-up">
-    <img src="assets/album3.jpg" alt="The Smiths - Hatful Of Hollow" style="width:350px;height:350px;">
-    <p>The Smiths - Hatful Of Hollow</p>
+    <img src="assets/album3.jpg" alt="Burial - Untrue" style="width:350px;height:350px;">
+    <p>Burial - Untrue</p>
     </div>
 </div>
 <div class="center" data-aos="fade-up">
