--- a/index.html
+++ b/index.html
@@ -64,27 +64,24 @@
 		<div id="toptext">
 			<p>recent albums:</p>
 		</div>
-		<div class="row">
+ 		<div class="row">
 			<div class="album" data-aos="fade-up">
 				<img src="assets/album1.jpg" alt="Imani - racecar" style="width:350px;height:350px;">
 				<p>Imani - racecar</p>
+				<img src="assets/album1.jpg" alt="tirestires - SHADOWDOG" style="width:350px;height:350px;">
+				<p>tirestires - SHADOWDOG</p>
 			</div>
 			<div class="album" data-aos="fade-up">
 				<img src="assets/album2.jpg" alt="George Clanton - Slide" style="width:350px;height:350px;">
 				<p>George Clanton - Slide</p>
+				<img src="assets/album2.jpg" alt="Radiohead - In Rainbows" style="width:350px;height:350px;">
+				<p>Radiohead - In Rainbows</p>
 			</div>
 			<div class="album" data-aos="fade-up">
 				<img src="assets/album3.jpg" alt="The Smiths - Hatful Of Hollow" style="width:350px;height:350px;">
 				<p>The Smiths - Hatful Of Hollow</p>
-			</div>
-		</div>
-		<div class="center" data-aos="fade-up"></div>
-		<div id="albumcover">
-		<div id="links" style="text-align: center;" data-aos="fade-in">
-			<a href="https://frostt.xyz/library" target="_blank" rel="noopener noreferrer">/offline music library/</a>
-		</div>
-		<div id="bottomtext">
-			<p>frostt</p>
+				<img src="assets/album3.jpg" alt="Burial - Untrue" style="width:350px;height:350px;">
+				<p>Burial - Untrue</p>
 		</div>
 	</body>
 </html>
