--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 				<img src="assets/album3.jpg" alt="Burial - Untrue" style="width:350px;height:350px;">
 				<p>Burial - Untrue</p>
 		</div>
+		<div id="bottomtext">
+			<p>frostt</p>
+		</div>
 	</body>
+	
 </html>
 <!-- Initiate AOS-->
 <script>
