--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
 			<div class="album" data-aos="fade-up">
 				<img src="assets/album3.jpg" alt="Burial - Untrue" style="width:350px;height:350px;">
 				<p>Burial - Untrue</p>
+			</div>
 		</div>
+		
+			
 		<div id="bottomtext">
-			<p>frostt</p>
+		<p>frostt</p>
 		</div>
 	</body>
 	
