--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 		<div id="toptext">
 			<p>recent albums:</p>
 		</div>
+		<div id="text">
+			last.fm - 
+			<code>frost_xyz</code> 
+		</div>
  		<div class="row">
 			<div class="album" data-aos="fade-up">
 				<img src="assets/album1.jpg" alt="tirestires - SHADOWDOG" style="width:350px;height:350px;">
