--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
  		<div class="row">
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album1.jpg" alt="tirestires - SHADOWDOG" style="width:350px;height:350px;">
-				<p>tirestires - SHADOWDOG</p>
+				<img src="assets/album1.jpg" alt="Bladee - Red Light" style="width:350px;height:350px;">
+				<p>Bladee - Red Light</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album2.jpg" alt="Radiohead - In Rainbows" style="width:350px;height:350px;">
-				<p>Radiohead - In Rainbows</p>
+				<img src="assets/album2.jpg" alt="The Clash - London Calling" style="width:350px;height:350px;">
+				<p>The Clash - London Calling</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album3.jpg" alt="Burial - Untrue" style="width:350px;height:350px;">
-				<p>Burial - Untrue</p>
+				<img src="assets/album3.jpeg" alt="Inner-Vation - Movements" style="width:350px;height:350px;">
+				<p>Inner-Vation - Movements</p>
 			</div>
 		</div>
 		
