--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
  		<div class="row">
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album1.jpg" alt="Bladee - Red Light" style="width:350px;height:350px;">
-				<p>Bladee - Red Light</p>
+				<img src="assets/album1.jpg" alt="Giant Claw - Mirror Guide" style="width:350px;height:350px;">
+				<p>Giant Claw - Mirror Guide</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album2.jpg" alt="The Clash - London Calling" style="width:350px;height:350px;">
-				<p>The Clash - London Calling</p>
+				<img src="assets/album2.jpg" alt="Green Day - Dookie" style="width:350px;height:350px;">
+				<p>Green Day - Dookie</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album3.jpeg" alt="Inner-Vation - Movements" style="width:350px;height:350px;">
-				<p>Inner-Vation - Movements</p>
+				<img src="assets/album3.jpeg" alt="death's dynamic shroud - Live From Japan" style="width:350px;height:350px;">
+				<p>death's dynamic shroud - Live From Japan</p>
 			</div>
 		</div>
 		
