--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<p>Green Day - Dookie</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album3.jpeg" alt="death's dynamic shroud - Live From Japan" style="width:350px;height:350px;">
+				<img src="assets/album3.jpg" alt="death's dynamic shroud - Live From Japan" style="width:350px;height:350px;">
 				<p>death's dynamic shroud - Live From Japan</p>
 			</div>
 		</div>
