--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
 	<!-- Start of socials list-->
 	<body onload="document.body.style.opacity='1'">
 		<div id="toptext">
-			<p>fros<strong>t</strong></p>
+			<p>fros<strong>t</strong><br>[she/they]</p>
 		</div>
-		<ul id="music-stream" class="links">
-			<li> <a href="http://frostt.xyz/music" target="_blank" rel="noopener noreferrer">/music stream/</a> </li>
-		</ul>
 		<div id="social">
 			<p><s>social</s></p>
 		</div>
@@ -64,6 +61,9 @@
 		<div id="text">
 			last.fm - 
 			<code>frost_xyz</code> 
+		</div>
+		<div id ="tocc">	
+			<a href="library/index.html">/library index/</a>
 		</div>
 		<div id="toptext">
 			<p>recent albums:</p>
