--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
  		<div class="row">
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album1.jpg" alt="Giant Claw - Mirror Guide" style="width:350px;height:350px;">
-				<p>Giant Claw - Mirror Guide</p>
+				<img src="assets/album1.jpg" alt="Bladee - Good Luck(Deluxe)" style="width:350px;height:350px;">
+				<p>Bladee - Good Luck(Deluxe)</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album2.jpg" alt="Green Day - Dookie" style="width:350px;height:350px;">
-				<p>Green Day - Dookie</p>
+				<img src="assets/album2.jpg" alt="Car Seat Headrest - Twin Fantasy" style="width:350px;height:350px;">
+				<p>Car Seat Headrest - Twin Fantasy</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album3.jpg" alt="death's dynamic shroud - Live From Japan" style="width:350px;height:350px;">
-				<p>death's dynamic shroud - Live From Japan</p>
+				<img src="assets/album3.jpg" alt="Bladee - The Fool" style="width:350px;height:350px;">
+				<p>Bladee - The Fool</p>
 			</div>
 		</div>
 		
