--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 		
-		<div id="bannerimage"></div>
+		<img class="banner" src="./styles/trans_flag.png" alt="" />
 		<div id="bottomtext">
 		<p>frostt</p>
 		</div>
