--- a/index.html
+++ b/index.html
@@ -31,36 +31,33 @@
 			<p><s>social</s></p>
 		</div>
 		<div id="text">
-			discord - 
-			<code>frost#1633</code> 
+			<p class="italic">discord - frost#1633</p>
 		</div>
 		<ul id="links" class="links">
 			<li> <a href="https://open.spotify.com/user/f3kt0iibbwi24lol31vb65a0p?si=c-l_wvYUQ0eW2p1nme3y7g&amp;nd=1" target="_blank" rel="noopener noreferrer">/spotify/</a> </li>
 		</ul>
 		<div id="text">
-			vrchat - 
-			<code>frost.xyz</code> 
+			<p class="italic">vrchat - frost.xyz</p>
 		</div>
 		<ul id="links" class="links">
 			<li> <a href="https://github.com/frostxyz-bit" target="_blank" rel="noopener noreferrer">/github/</a> </li>
 		</ul>
+		</div>
 		<div id="text">
-			reddit - 
-			<code>xFRxSTx</code> 
+			<p class="italic">reddit - xFRxSTx</p> 
 		</div>
 		<ul id="links" class="links">
 			<li> <a href="https://steamcommunity.com/id/frost_xyz/" target="_blank" rel="noopener noreferrer">/steam/</a> </li>
 		</ul>
 		<div id="text">
-			twitter - 
-			<code>fr6st_</code> 
+			<p class="italic">twitter - fr6st_</p>
+		
 		</div>
 		<ul id="links" class="links">
 			<li> <a href="https://www.instagram.com/frost.xyz/" target="_blank" rel="noopener noreferrer">/instagram/</a> </li>
 		</ul>
 		<div id="text">
-			last.fm - 
-			<code>frost_xyz</code> 
+			<p class="italic">last.fm - frost_xyz</p>
 		</div>
 		<div id ="tocc">	
 			<a href="library/index.html">/library index/</a>
@@ -71,24 +68,24 @@
 
  		<div class="row">
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album1.jpg" alt="Bladee - Good Luck(Deluxe)" style="width:350px;height:350px;">
-				<p>Bladee - Good Luck(Deluxe)</p>
+				<img src="assets/album1.jpg" alt="Bladee & Ecco2k - Crest" style="width:350px;height:350px;">
+				<p>Bladee & Ecco2k - Crest</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album2.jpg" alt="Car Seat Headrest - Twin Fantasy" style="width:350px;height:350px;">
-				<p>Car Seat Headrest - Twin Fantasy</p>
+				<img src="assets/album2.jpeg" alt="ستاره دار - دل" style="width:350px;height:350px;">
+				<p>ستاره دار - دل</p>
 			</div>
 			<div class="album" data-aos="fade-up">
-				<img src="assets/album3.jpg" alt="Bladee - The Fool" style="width:350px;height:350px;">
-				<p>Bladee - The Fool</p>
+				<img src="assets/album3.jpg" alt="Radiohead - In Rainbows [DISK 2]" style="width:350px;height:350px;">
+				<p>Radiohead - In Rainbows [DISK 2]</p>
 			</div>
 		</div>
+		<div id="container">
+			<div id="floated">
+				<img src="./assets/frost_logo_gif.gif" />
+			</div>
 		
-		<img class="banner" src="./styles/trans_flag.png" alt="" />
-		<div id="bottomtext">
-		<p>frostt</p>
-		</div>
-	</body>
+
 	
 </html>
 <!-- Initiate AOS-->
