total website overhaul

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		<meta property="og:image:height" content="800" />
 		<meta property="og:url" content="https://frostxyz.carrd.co" />
 		<meta property="twitter:card" content="summary_large_image" />
-		<link rel="icon" href="assets/favicon.png">
 		<link href="styles/css.css" rel="stylesheet" type="text/css" />
 		<link href="styles/fade-in.css" rel="stylesheet" type="text/css" />
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -27,37 +26,20 @@
 		<div id="toptext">
 			<p>fros<strong>t</strong><br>[she/they]</p>
 		</div>
-		<div id="social">
-			<p><s>social</s></p>
+		<div id="toptextsmaller">
+			<p>hi ! welcome to my website. here you can find my contact info and other various projects i have been working on.</p>
 		</div>
-		<div id="text">
-			<p class="italic">discord - frost#1633</p>
 		</div>
-		<ul id="links" class="links">
-			<li> <a href="https://open.spotify.com/user/f3kt0iibbwi24lol31vb65a0p?si=c-l_wvYUQ0eW2p1nme3y7g&amp;nd=1" target="_blank" rel="noopener noreferrer">/spotify/</a> </li>
-		</ul>
-		<div id="text">
-			<p class="italic">vrchat - frost.xyz</p>
+		<div id="toptextsmaller">
+			<a href= "./soc/index.html"> socials/contact info </a> • <a href= "./cats/index.html"> cat photos :3 </a> • <a href= "./webex/index.html"> assorted websites </a> • <a href= "./vrc/index.html"> vrchat/unity stuff </a>
 		</div>
-		<ul id="links" class="links">
-			<li> <a href="https://github.com/frostxyz-bit" target="_blank" rel="noopener noreferrer">/github/</a> </li>
-		</ul>
 		</div>
-		<div id="text">
-			<p class="italic">reddit - xFRxSTx</p> 
+
+		<div id="toptext">
+			<p>updates:</p>
 		</div>
-		<ul id="links" class="links">
-			<li> <a href="https://steamcommunity.com/id/frost_xyz/" target="_blank" rel="noopener noreferrer">/steam/</a> </li>
-		</ul>
-		<div id="text">
-			<p class="italic">twitter - fr6st_</p>
-		
-		</div>
-		<ul id="links" class="links">
-			<li> <a href="https://www.instagram.com/frost.xyz/" target="_blank" rel="noopener noreferrer">/instagram/</a> </li>
-		</ul>
-		<div id="text">
-			<p class="italic">last.fm - frost_xyz</p>
+		<div id="toptextsmallest">
+			<p>4/3/2022/ - deleted twitter, not sure if it is really going to impact me that much since i never really used it anyways. better safe than sorry i guess.</p>
 		</div>
 		<div id ="tocc">	
 			<a href="library/index.html">/library index/</a>
@@ -67,28 +49,22 @@
 		</div>
 
  		<div class="row">
-			<div class="album" data-aos="fade-up">
+			<div class="album">
 				<img src="assets/album1.jpg" alt="Bladee & Ecco2k - Crest" style="width:350px;height:350px;">
 				<p>Bladee & Ecco2k - Crest</p>
 			</div>
-			<div class="album" data-aos="fade-up">
+			<div class="album">
 				<img src="assets/album2.jpeg" alt="ستاره دار - دل" style="width:350px;height:350px;">
 				<p>ستاره دار - دل</p>
 			</div>
-			<div class="album" data-aos="fade-up">
+			<div class="album">
 				<img src="assets/album3.jpg" alt="Radiohead - In Rainbows [DISK 2]" style="width:350px;height:350px;">
 				<p>Radiohead - In Rainbows [DISK 2]</p>
 			</div>
 		</div>
-		<div id="container">
-			<div id="floated">
-				<img src="./assets/frost_logo_gif.gif" />
-			</div>
-		
 
 	
 </html>
 <!-- Initiate AOS-->
-<script>
-	AOS.init();
-</script>
+<!-- rip AOS lol -->
+
