--- a/index.html
+++ b/index.html
@@ -31,18 +31,15 @@
 		</div>
 		</div>
 		<div id="toptextsmaller">
-			<a href= "./soc/index.html"> socials/contact info </a> • <a href= "./cats/index.html"> cat photos :3 </a> • <a href= "./webex/index.html"> assorted websites </a> • <a href= "./vrc/index.html"> vrchat/unity stuff </a>
-		</div>
-		</div>
-
-		<div id="toptext">
-			<p>updates:</p>
+			<a href= "./soc/index.html"> socials/contact info </a> • <a href= "./photos/index.html"> photos </a> • <a href= "./webex/index.html"> assorted websites </a> • <a href= "./vrc/index.html"> vrchat/unity stuff </a>
 		</div>
 		<div id="toptextsmallest">
-			<p>4/3/2022/ - deleted twitter, not sure if it is really going to impact me that much since i never really used it anyways. better safe than sorry i guess.</p>
+			<img src="./assets/cat1.jpg" height="150" width="auto" >
+		</div>
+	
 		</div>
 		<div id ="tocc">	
-			<a href="library/index.html">/library index/</a>
+			<a href="library/index.html">/music library index/</a>
 		</div>
 		<div id="toptext">
 			<p>recent albums:</p>
@@ -62,7 +59,9 @@
 				<p>Radiohead - In Rainbows [DISK 2]</p>
 			</div>
 		</div>
-
+		<img src="./assets/banner1.png">
+		<img src="./assets/banner2.gif">
+		<img src="./assets/banner3.gif">
 	
 </html>
 <!-- Initiate AOS-->
