--- a/photos/index.html
+++ b/photos/index.html
@@ -27,38 +27,22 @@
             <a href="../index.html">go back</a>
         </div>
 		<div id="toptextsmaller">
-			<p>here are some of my favorite cat photos that i have collected over time. feel free to share them with whoever you want !</p>
+			<p>photos i have taken so far on my new camera - i mainly photograph cool structures and other things that interest me.</p>
 		</div>
- 		<div class="row">
-			<div class="album">
-				<img src="../assets/cat1.jpg" alt="cat photo" style="width:350px;height:350px;">
-				<p>two cats on a laptop</p>
-			</div>
-			<div class="album">
-				<img src="../assets/cat2.jpg" alt="cat photo" style="width:350px;height:350px;">
-				<p>cat hiding under a rug</p>
-			</div>
-            <div class="album">
-				<img src="../assets/cat3.jpg" alt="cat photo" style="width:350px;height:350px;">
-				<p>a very polite cat</p>
-			</div>
-			</div>
-			</div>
-			</div>
-        <div class="row">
-            <div class="album">
-				<img src="../assets/cat4.jpg" alt="cat photo" style="width:350px;height:350px;">
-				<p>two cats on a bunk bed</p>
-        </div>
-        <div class="album">
-            <img src="../assets/cat5.jpg" alt="cat photo" style="width:350px;height:350px;">
-            <p>a cat sleeping</p>
+		<div class="album">
+			<img src="../assets/photo1.jpg" alt="museum photo" style="width:65%;height:auto;">
+			<p>museum food court ceiling</p>
 		</div>
         <div class="album">
-            <img src="../assets/cat6.jpg" alt="cat photo" style="width:350px;height:350px;">
-            <p>cat on a fence</p>
+            <img src="../assets/photo2.jpg" alt="museum photo of clothing" style="width:35%;height:auto;">
+            <p>clothes hanging out of the windows</p>
         </div>
-	
+        <div class="album">
+            <img src="../assets/photo3.jpg" alt="museum photo of exhibit" style="width:65%;height:auto;">
+            <p>an installation at the art museum</p>
+        </div>
+            
+</html>
 </html>
 <!-- Initiate AOS-->
 <!-- rip AOS lol -->
