--- a/webex/index.html
+++ b/webex/index.html
@@ -57,7 +57,7 @@
             <a href="https://sustainable.websites.ngo/">sustainable websites - a guide to sustainable websites and more</a>
         </div>
         <div id="toptextsmallest">
-            <a href="https://sustainable.websites.ngo/">windowswap - open a new window somewhere in the world</a>
+            <a href="https://www.window-swap.com/">windowswap - open a new window somewhere in the world</a>
         </div>
         <div id="toptextsmallest">
             <a href="https://freedns.afraid.org/">freedns - free static dns subdomain and domain hosting</a>
