--- a/vrc/index.html
+++ b/vrc/index.html
@@ -29,17 +29,16 @@
 		<div id="toptextsmaller">
 			<p>some projects i have been working on for vrchat - some are finished, and some are less than finished.</p>
 		</div>
- 		<div class="row">
-			<div class="album">
-				<img src="../assets/vrc1.png" alt="vrc world" style="width:600px;height:350px;">
-				<p>a pool world with working water physics</p>
-			</div>
+		<div class="album">
+			<img src="../assets/vrc1.png" alt="vrc world" style="width:75%;height:auto;">
+			<p>pool world with working water physics</p>
+		</div>
             <div class="album">
-				<img src="../assets/vrc2.png" alt="king avatar" style="width:350px;height:450px;">
+				<img src="../assets/vrc2.png" alt="king avatar" style="width:auto;height:75%;">
 				<p>an avatar of king from the owl house in his cheerleader uniform</p>
 			</div>
             <div class="album">
-				<img src="../assets/vrc3.png" alt="vrc world" style="width:600px;height:350px;">
+				<img src="../assets/vrc3.png" alt="vrc world" style="width:75%;height:auto;">
 				<p>a house world (still have to finish the post processing)</p>
 			</div>
 </html>
