--- a/photos/index.html
+++ b/photos/index.html
@@ -24,22 +24,19 @@
 	<!-- Start of socials list-->
 	<body onload="document.body.style.opacity='1'">
         <div id="toptext">
-            <a href="../index.html">go back</a>
+            <a href="../index.html">monsi</a>
         </div>
 		<div id="toptextsmaller">
-			<p>photos i have taken so far on my new camera - i mainly photograph cool structures and other things that interest me.</p>
+			<p>mi musi</p>
 		</div>
 		<div class="album">
 			<img src="../assets/photo1.jpg" alt="museum photo" style="width:65%;height:auto;">
-			<p>museum food court ceiling</p>
 		</div>
         <div class="album">
             <img src="../assets/photo2.jpg" alt="museum photo of clothing" style="width:35%;height:auto;">
-            <p>clothes hanging out of the windows</p>
         </div>
         <div class="album">
             <img src="../assets/photo3.jpg" alt="museum photo of exhibit" style="width:65%;height:auto;">
-            <p>an installation at the art museum</p>
         </div>
             
 </html>
