--- a/soc/index.html
+++ b/soc/index.html
@@ -25,7 +25,7 @@
 	<body onload="document.body.style.opacity='1'">
         <div id="toptext">
             <div id="links">
-                <a href="../index.html">go back</a>
+                <a href="../index.html">monsi</a>
             </div>
             <div id="text">
                 <p class="italic">discord - frost#1633</p>
@@ -55,7 +55,7 @@
             <div id="text">
                 <p class="italic">wikipedia - Frost.xyz</p>
             </div>
-</html>
+            </html>
 <!-- Initiate AOS-->
 <!-- rip AOS lol -->
 
