--- a/vrc/index.html
+++ b/vrc/index.html
@@ -24,22 +24,18 @@
 	<!-- Start of socials list-->
 	<body onload="document.body.style.opacity='1'">
         <div id="toptext">
-            <a href="../index.html">go back</a>
+            <a href="../index.html">monsi</a>
         </div>
 		<div id="toptextsmaller">
-			<p>some projects i have been working on for vrchat - some are finished, and some are less than finished.</p>
 		</div>
 		<div class="album">
 			<img src="../assets/vrc1.png" alt="vrc world" style="width:75%;height:auto;">
-			<p>pool world with working water physics</p>
 		</div>
             <div class="album">
 				<img src="../assets/vrc2.png" alt="king avatar" style="width:auto;height:75%;">
-				<p>an avatar of king from the owl house in his cheerleader uniform</p>
 			</div>
             <div class="album">
 				<img src="../assets/vrc3.png" alt="vrc world" style="width:75%;height:auto;">
-				<p>a house world (still have to finish the post processing)</p>
 			</div>
 </html>
 <!-- Initiate AOS-->
