--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			<p>fros<strong>t</strong><br>[she/they]</p>
 		</div>
 		<div id="toptextsmaller">
-			<p>hi ! welcome to my website. here you can find my contact info and other various projects i have been working on.</p>
+			<p>toki! lipu ilo ni li lon tawa mi.</p>
 		</div>
 		</div>
 		<div id="toptextsmaller">
-			<a href= "./soc/index.html"> socials/contact info </a> • <a href= "./photos/index.html"> photos </a> • <a href= "./webex/index.html"> assorted websites </a> • <a href= "./vrc/index.html"> vrchat/unity stuff </a>
+			<a href= "./soc/index.html"> mi sona </a> • <a href= "./photos/index.html"> mute sitelen </a> • <a href= "./webex/index.html"> lipu ilo pona mute </a> • <a href= "./vrc/index.html"> vrchat/unity ijo </a>
 		</div>
 		<div id="toptextsmallest">
 			<img src="./assets/cat1.jpg" height="150" width="auto" >
@@ -39,10 +39,10 @@
 	
 		</div>
 		<div id ="tocc">	
-			<a href="library/index.html">/music library index/</a>
+			<a href="library/index.html">/musi/</a>
 		</div>
 		<div id="toptext">
-			<p>recent albums:</p>
+			<p>mi kute:</p>
 		</div>
 
  		<div class="row">
