--- a/laptop/index.html
+++ b/laptop/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>unity projects</title>
+		<title>laptop</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 		<meta name="description" content="_____" />
