--- a/laptop/index.html
+++ b/laptop/index.html
@@ -164,7 +164,8 @@
         </div>
         <div id="toptext">
             <p>For instance, if your device name is "2022-XXXXXXX", then you would type in <code>2022-XXXXXXX\sktech</code> as the username.</p>
-            <p>Well, that's all there is to it. If you ever need administrator access, just make sure to always sign in with the "sktech" account.</p>
+	    <p>Update: Alternatively, you can just use <code>.\sktech</code> as the username.</p>
+	    <p>Well, that's all there is to it. If you ever need administrator access, just make sure to always sign in with the "sktech" account.</p>
         </div>
         <div id="toptext">
 
