--- a/laptop/securly.html
+++ b/laptop/securly.html
@@ -43,9 +43,11 @@
           <p>Next, get the Firefox browser and "Hoxx VPN" as an extension for Firefox.</p>
           <p>Then, go to <code>about:preferences</code> and search up "Certificates".</p>
           <p>open the certificate menu, scroll down until you see "Securly", select it, and then click "Delete".</p>
-          <p>Securly should now be uninstalled on Firefox. Make sure to use a VPN!</p>
+	  <p>Securly should now be uninstalled on Firefox. Make sure to use a VPN!</p>
         </div>
-      
+      	<div id="toptextsmallest">
+		<img src="./securly.png">
+	</div>
     </body>
 </html>
 <!-- Initiate AOS-->
