--- a/laptop/index.html
+++ b/laptop/index.html
@@ -26,6 +26,10 @@
         <div id="toptextsmaller">
             <p>How to gain access to local administrator on Windows 10 school laptops.</p>
         </div>
+	<div id="toptext">
+		<p>See also:</p>
+		<a href="./securly.html">How to bypass Securly.</a>
+	</div>
         <div id="toptext">
             Materials needed:
         </div>
