--- a/laptop/securly.html
+++ b/laptop/securly.html
@@ -30,23 +30,26 @@
             <p>This page details information about Securly.</p>
         </div>
         <div id="toptext">
-          <a href="./manifesto.txt">"Manifesto"</a>
+          <a href="./manifesto.txt">Manifesto</a>
         </div>
         <div id="toptextsmaller">
             <p>How to remove Securly.</p>
         </div>
         <div id="toptext">
             <p>First, if you haven't already, make sure you have local administrator access using the methods in the website listed below:</p>  
-            <a href="./index.hmtl">"How to get administrator access"</a>
+            <a href="./index.hmtl">How to get administrator access</a>
         </div>  
         <div id="toptextsmallest">
           <p>Next, get the Firefox browser and "Hoxx VPN" as an extension for Firefox.</p>
           <p>Then, go to <code>about:preferences</code> and search up "Certificates".</p>
-          <p>open the certificate menu, scroll down until you see "Securly", select it, and then click "Delete".</p>
+          <p>Open the certificate menu, scroll down until you see "Securly", select it, and then click "Delete".</p>
 	  <p>Securly should now be uninstalled on Firefox. Make sure to use a VPN!</p>
         </div>
       	<div id="toptextsmallest">
 		<img src="./securly.png">
+	</div>
+	<div id="toptextsmaller">
+		<p>CAUTION: MAKE SURE TO VERIFY THAT THE CERTIFICATE IS DELETED AFTER EVERY SHUTDOWN OR RESTART OF THE LAPTOP.</p>	 
 	</div>
     </body>
 </html>
