--- a/laptop/securly.html
+++ b/laptop/securly.html
@@ -37,7 +37,7 @@
         </div>
         <div id="toptext">
             <p>First, if you haven't already, make sure you have local administrator access using the methods in the website listed below:</p>  
-            <a href="./index.hmtl">How to get administrator access</a>
+            <a href="./index.html">How to get administrator access</a>
         </div>  
         <div id="toptextsmallest">
           <p>Next, get the Firefox browser and "Hoxx VPN" as an extension for Firefox.</p>
