--- a/laptop/index.html
+++ b/laptop/index.html
@@ -133,7 +133,7 @@
             <p>After shutting down your laptop, boot it up as you normally do. However, do NOT sign in yet.</p>
         </div>
         <div id="toptext">
-            <p>When you arrive at the lock screen, press the "SHIFT" key on the keyboard until a command prompt window opens up, as seen below.</p>
+            <p>When you arrive at the lock screen, repeatedly press the "SHIFT" key on the keyboard (basically spam it) until a command prompt window opens up, as seen below.</p>
         </div>
         <div id="toptext">
             <p>Once the prompt has opened, type <code>net user sktech password</code>, and exit the window once it has completed succesfully. Then, sign in with your *student* account.</p>
