--- a/laptop/securly.html
+++ b/laptop/securly.html
@@ -40,8 +40,17 @@
             <a href="./index.html">How to get administrator access</a>
         </div>  
         <div id="toptextsmallest">
-          <p>Next, get the Firefox browser and "Hoxx VPN" as an extension for Firefox.</p>
-          <p>Then, go to <code>about:preferences</code> and search up "Certificates".</p>
+          <p>Next, get the Firefox browser and follow the instructions to install Hoxx VPN. First, download the extension file from the link below.</p>
+	  <a href="./hoxx_vpn.xpi">Hoxx VPN Download</a>
+	  <p>Now that you have the Hoxx VPN extension file, go to <code>about:addons</code> in Firefox</p>
+	  <p>Drag the <code>.xpi</code> file into the extensions screen, as shown in the screenshot, and then add the extension.</p>
+	</div>
+	<div id="toptextsmallest">
+		<img src="./vpn.png">	 
+	</div>
+		
+	<div id="toptextsmallest">	
+	  <p>Then, go to <code>about:preferences</code> and search up "Certificates".</p>
           <p>Open the certificate menu, scroll down until you see "Securly", select it, and then click "Delete".</p>
 	  <p>Securly should now be uninstalled on Firefox. Make sure to use a VPN!</p>
         </div>
