--- a/laptop/securly.html
+++ b/laptop/securly.html
@@ -42,9 +42,8 @@
         <div id="toptextsmallest">
           <p>Next, get the Firefox browser and follow the instructions to install Hoxx VPN. First, download the extension file from the link below.</p>
 	  <a href="./hoxx_vpn.xpi">Hoxx VPN Download</a>
-	  <p>Now that you have the Hoxx VPN extension file, go to <code>about:addons</code> in Firefox</p>
-	  <p>Drag the <code>.xpi</code> file into the extensions screen, as shown in the screenshot, and then add the extension.</p>
-	</div>
+	  <p>Once the extension file has downloaded, simply click "Continute to Installation"</p>
+	  </div>
 	<div id="toptextsmallest">
 		<img src="./vpn.png">	 
 	</div>
