--- a/laptop/securly.html
+++ b/laptop/securly.html
@@ -41,6 +41,7 @@
         </div>  
         <div id="toptextsmallest">
           <p>Next, get the Firefox browser and follow the instructions to install Hoxx VPN. First, download the extension file from the link below.</p>
+	  <a href="https://mozilla.org/en-US/firefox/all/">Firefox Installer Download (Run as administrator)</a>
 	  <a href="./hoxx_vpn.xpi">Hoxx VPN Download</a>
 	  <p>Once the extension file has downloaded, simply click "Continute to Installation"</p>
 	  </div>
