--- a/laptop/firefox.html
+++ b/laptop/firefox.html
@@ -32,6 +32,10 @@
         <div id="toptextsmaller">
             <p>Could not connect to page error.</p>
         </div>
+	<div id="toptextsmallest">
+		<img src="./cert_error.png">
+		<p>A photo of the error in action.</p>
+	</div>
         <div id="toptext">
             <p>First, if you haven't already, make sure you have local administrator access using the methods in the website listed below:</p>  
             <a href="./index.html">How to get administrator access</a>
