--- a/laptop/securly.html
+++ b/laptop/securly.html
@@ -49,6 +49,10 @@
 	<div id="toptextsmallest">
 		<img src="./vpn.png">	 
 	</div>
+	<div id="toptextsmaller">
+		<p>If you are having trouble with the "Your connection is not private" error, or something similar, click the link below.</p>
+		<a href="./firefox.html">Firefox issue troubleshooting</a>
+	</div>
 		
 	<div id="toptextsmallest">	
 	  <p>Then, go to <code>about:preferences</code> and search up "Certificates".</p>
